# cuda-cmake-demo

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CudaArchitectureSelector.cmake
include/cuda-cmake-demo/: daxpy.h
src/: daxpy.cu  main.cc
